紧急修复命令行工具导航 404 的问题。

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -16,7 +16,7 @@
 
 ## 命令行工具
 
-使用命令行工具可以非常方便地部署和发布云引擎项目，查看项目状态和查看日志，甚至支持多应用部署。具体请参考 [命令行工具指南](cloud_code_commandline.html)。
+使用命令行工具可以非常方便地部署和发布云引擎项目，查看项目状态和查看日志，甚至支持多应用部署。具体请参考 [命令行工具指南](leanengine_cli.html)。
 
 ## Demo
 
@@ -24,7 +24,7 @@
 
 ## 快速入门
 
-首先确认本机已经安装了相关的运行环境和 [命令行工具](cloud_code_commandline.html)。{% block runtime_env %}{% endblock %}
+首先确认本机已经安装了相关的运行环境和 [命令行工具](leanengine_cli.html)。{% block runtime_env %}{% endblock %}
 
 ### 创建应用
 
@@ -473,7 +473,7 @@ if (name) {
 
 ### 使用命令行工具部署
 
-使用命令行工具可以非常方便地部署、发布应用，查看应用状态，查看日志，甚至支持多应用部署。具体使用请参考 [命令行工具指南](cloud_code_commandline.html)。
+使用命令行工具可以非常方便地部署、发布应用，查看应用状态，查看日志，甚至支持多应用部署。具体使用请参考 [命令行工具指南](leanengine_cli.html)。
 
 除此之外，还可以使用 git 仓库部署。你需要将项目提交到一个 git 仓库，我们并不提供源码的版本管理功能，而是借助于 git 这个优秀的分布式版本管理工具。我们推荐你使用 [CSDN Code 平台](https://code.csdn.net/)、[Github](https://github.com/) 或者 [BitBucket](https://bitbucket.org/) 这样第三方的源码托管网站，也可以使用你自己搭建的 git 仓库（比如 [gitlab.org](http://gitlab.org/)）。
 
