--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -1,3 +1,6 @@
+{% set appid = '{{appid}}' %}
+{% set appkey = '{{appkey}}' %}
+{% set masterkey = '{{masterkey}}' %}
 {% set quartz_docs_link = '[Quartz 文档（英文）](http://www.quartz-scheduler.org/documentation/quartz-1.x/tutorials/crontrigger)' %}
 
 # 云函数开发指南 &middot; {{platformName}}
@@ -132,7 +135,10 @@ https://leancloud.cn/1.1/functions/averageStars
 
 Hook 函数本质上是云函数，但它有固定的名称，定义之后会**由系统**在特定事件或操作（如数据保存前、保存后，数据更新前、更新后等等）发生时**自动触发**，而不是由开发者来控制其触发时机。
 
-使用 Hook 函数需要注意 [防止死循环调用](#防止死循环调用)。
+需要注意：
+
+- 通过控制台进行 [数据导入](dashboard_guide.html#本地数据导入_LeanCloud) 不会触发以下任何 hook 函数。
+- 使用 Hook 函数需要 [防止死循环调用](#防止死循环调用)。
 
 ### {{hook_before_save}}
 在将对象保存到云端数据表之前，可以对数据做一些清理或验证。例如，一条电影评论不能过长，否则界面上显示不开，需要将其截断至 140 个字符：
