fix(docs): 修改错字和病句
感谢用户 cicalafe、咕噜咕噜o(^_^)o 的反馈

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -44,7 +44,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 然后点击 [**应用选项**](/app.html?appid={{appid}}#/permission)，查看与短信相关选项。当开启 **安全中心** > **短信发送** 服务之后，以下打勾的选项会被默认开启：
 
 - 【&check;】用户账号 > **用户注册时，向注册手机号码发送验证短信**<br/>
-  开启：调用 AVUser 注册相关的接口时，如果传入了手机号，则系统会自动发送验证短信，然后开发者需要手动调用一下验证接口之后，如此做在 `_User` 表中的 `mobilePhoneVerified` 值会被置为 `true`。<br/>
+  开启：调用 AVUser 注册相关的接口时，如果传入了手机号，系统则会自动发送验证短信，然后开发者需要手动调用一下验证接口，这样 `_User` 表中的 `mobilePhoneVerified` 值才会被置为 `true`。<br/>
   关闭：调用 AVUser 注册相关的接口不会发送短信。
 
 - 用户账号 > **未验证手机号码的用户，禁止登录**<br/>
