--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -170,7 +170,7 @@ description     objectId
 
 ### 更新对象
 
-{{productName}} 上的更新对象都是针对单个对象，在确保对象的 objectId 不为空才可以更新对象。云端判断一个对象是新增还是更新，是根据<u>有没有 objectId</u> 的来决定。
+{{productName}} 上的更新对象都是针对单个对象，在确保对象的 objectId 不为空才可以更新对象。云端根据<u>有没有 objectId</u> 来决定一个对象是新增还是更新。
 
 {% block code_update_todo_location %}{% endblock %}
 
