fix(docs): [nav] 遗漏链接：关系建模 Android (#1116)

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -116,6 +116,7 @@
             <li><a href="leanstorage_guide-android.html">数据存储开发指南</a></li>
             <li><a href="android_push_guide.html">消息推送开发指南</a></li>
             <li><a href="realtime_guide-android.html">实时通信开发指南</a></li>
+            <li><a href="relation_guide-android.html">关系建模指南</a></li>
             <li><a href="acl_guide-android.html">权限管理使用指南</a></li>
             <li><a href="android_statistics.html">统计分析开发指南</a></li>
             <li><a href="sms_guide-android.html">短信服务使用指南</a></li>
