--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -244,12 +244,22 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 ### 短信签名说明
 
-短信签名是指短信内容里用【】括起来的短信发送方名称。如果没有明确在模板里指定，默认就是你的应用名称。短信签名**不能超过 10 个字符（五个汉字），不能有任何非文字字符，也不可以是变量**。应用名称可以在应用设置里修改，并且短信签名**必须出现在短信内容的开头或者结尾。**
+短信签名是指短信内容里用【】括起来的短信发送方名称。如果没有明确在模板里指定，默认就是你的应用名称。应用名称可以在 [控制台 > 设置 > 基本信息](/app.html?appid={{appid}}#/general) 里修改，并且短信签名**必须出现在短信内容的开头或结尾。**
 
 #### 签名规范
- - 签名必须是公司简称，品牌名，网站名，长度控制在 3 到 11 之间
- - 不需要带上中文括号 【】
- - 一个应用最多只可以拥有 3 个签名（包含审核未通过的签名）
+ - 签名必须是公司简称、品牌名、网站名，长度控制在 3 到 11 个字符之间。例如签名【应用A】中的 **应用A** 算为 3 个字符。
+ - 不能有任何非文字字符，也不可以是变量。
+ - 不需要带上实心方头括号【】。
+ - 一个应用最多可以拥有 3 个签名（包含审核未通过的签名）。
+
+## 短信计费
+
+如果一个短信模板字数超过 70 个字（包括签名的字数），那么该短信在发送时会被运营商<u>按多条来收取费用</u>，但接收者收到的仍是<u>一条完整的短信</u>。
+
+- 小于或等于 70 个字，按一条计费。
+- 大于 70 个字，按每 67 字一条计费。
+
+每条短信的收费标准请参考 [官网价格方案](/pricing.html)。
 
 {% block sms_demo %}{% endblock %}
 
