--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -658,13 +658,14 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 {{geoPointObjectN
 {% block text_platform_geoPoint_notice %}{% endblock %}
 
 ## 用户
-用户系统是每一个应用都会拥有的功能，注册，登录，密码重置的传统功能暂且不表，随着移动开发的趋势，手机号一键登录，手机短信验证码登录等等诸多与用户相关的功能都逐渐被很多应用接纳，因此 {{productName}} 提供了一系列的接口，帮助开发者实现各种场景下的用户模块里面的功能。
 
-{{userObjectName}} 是 {{productName}} 封装的用来描述一个用户的特殊对象。下面的章节将围绕 {{userObjectName}}，按照功能接口逐一展示其用法和可以实现的功能。
+用户系统几乎是每款应用都要加入的功能。除了基本的注册、登录和密码重置，移动端开发还会使用手机号一键登录、短信验证码登录等功能。{{productName}} 提供了一系列接口来帮助开发者快速实现各种场景下的需求。
+
+`AVUser` 是用来描述一个用户的特殊对象，与之相关的数据都保存在 `_User` 数据表中。
 
 ### 注册
 
-#### 手机号一键登录
+#### 手机号码登录
 
 一些应用为了提高首次使用的友好度，一般会允许用户浏览一些内容，直到用户发起了一些操作才会要求用户输入一个手机号，而云端会自动发送一条验证码的短信给用户的手机号，最后验证一下，完成一个用户注册并且登录的操作，例如很多团购类应用都有这种用户场景。
 
@@ -678,25 +679,25 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 {{geoPointObjectN
 
 #### 用户名和密码注册
 
-采用用户名和密码注册的时候需要注意，密码是以明文方式通过 HTTPS 加密传输给云端，而我们保证所有密码都是密文存储，并且我们的加密算法是无法通过所谓「彩虹表撞库」获取的，这一点请开发者放心，换言之用户的密码只可能用户本人知道，开发者不论是通过控制台还是 API 都是无法获取的。另外我们需要强调**在客户端，应用切勿再次对密码加密，这会导致重置密码等功能失效。**
+采用「用户名 + 密码」注册时需要注意：密码是以明文方式通过 HTTPS 加密传输给云端，云端会以密文存储密码，并且我们的加密算法是无法通过所谓「彩虹表撞库」获取的，这一点请开发者放心。换言之，用户的密码只可能用户本人知道，开发者不论是通过控制台还是 API 都是无法获取的。另外我们需要强调**在客户端，应用切勿再次对密码加密，这会导致重置密码等功能失效。**
 
 例如，注册一个用户的示例代码如下（用户名：`Tom`，密码：`cat!@#123`）：
 
 {% block code_user_signUp_with_username_and_password %}{% endblock %}
 
-像往常一样，我们建议，在可能的情况下，尽量使用异步版本的方法，这样就不会影响到应用程序主 UI 线程的响应。
+我们建议在可能的情况下尽量使用异步版本的方法，这样就不会影响到应用程序主 UI 线程的响应。
 
-如果注册不成功，请检查一下返回的错误对象。最有可能的情况是，用户名或电子邮件已经被另一个用户注册，此时可以提示用户尝试用不同的用户名进行注册，也可以要求用户用 Email 做为用户名注册。
+如果注册不成功，请检查一下返回的错误对象。最有可能的情况是用户名已经被另一个用户注册，错误代码 [202](error_code.html#_202)，即 `_User` 表中的 `username` 字段已存在相同的值，此时需要提示用户尝试不同的用户名来注册。同样，邮件 `email` 和手机号码 `mobilePhoneNumber` 字段也要求在各自的列中不能有重复值出现，否则会出现 [203](error_code.html#_203)、[214](error_code.html#_214) 错误。
 
-这样做的好处是，在用户提交信息时可以将输入的「用户名」默认设置为用户的 Email 地址，以后在用户忘记了密码的情况下，可以使用 {{productName}} 提供的「重置密码」功能。
+开发者也可以要求用户使用 Email 做为用户名注册，即在用户提交信息后将 `_User` 表中的 `username` 和 `email` 字段都设为相同的值，这样做的好处是用户在忘记密码的情况下可以直接使用「[邮箱重置密码](#重置密码)」功能，无需再额外绑定电子邮件。
 
 关于自定义邮件模板和验证链接，请参考博客文章 《[自定义应用内用户重设密码和邮箱验证页面](https://blog.leancloud.cn/607/)》。
 
-#### 设置手机号
+#### 设置手机号码
 
-微信，陌陌等流行的应用都会建议用户的账号和一个手机号绑定，这样方便进行身份认证以及日后的密码找回等安全模块的使用，为此，在注册用户的时候也可以设置手机号，并且我们提供了一整套发送短信验证码以及验证手机号的流程。
+微信、陌陌等流行应用都会建议用户将账号和一个手机号绑定，这样方便进行身份认证以及日后的密码找回等安全模块的使用。我们也提供了一整套发送短信验证码以及验证手机号的流程，这样注册用户的时候也可以设置手机号，并且
 
-这部分流程以及代码演示请参考 {{ link_to_sms_guide_doc }}。
+为此，在注册用户的时候也可以设置手机号，并且我们提供了一整套发送短信验证码以及验证手机号的流程。这部分流程以及代码演示请参考 {{ link_to_sms_guide_doc }}。
 
 ### 登录
 
@@ -716,7 +717,7 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 {{geoPointObjectN
 
 #### 手机号验证码登录
 
-中国电信，中国联通，中国移动三大运营商的官网登录都支持 2 种方式，一种是手机号和密码，另一种就是手机号和随机的验证码登录，我们也提供了这种方式。
+中国电信、中国联通、中国移动，这三大运营商的官网登录均支持「手机号 + 密码」和「手机号 + 随机验证码」的登录方式，我们也提供了这些方式。
 
 首先，调用发送登录验证码的接口：
 
@@ -731,6 +732,7 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 {{geoPointObjectN
 输入错误的密码或验证码会导致用户登录失败。如果在 15 分钟内，同一个用户登录失败的次数大于 6 次，该用户账户即被云端暂时锁定，此时云端会返回错误码 `{"code":1,"error":"登录失败次数超过限制，请稍候再试，或者通过忘记密码重设密码。"}`，开发者可在客户端进行必要提示。
 
 锁定将在最后一次错误登录的 15 分钟之后由云端自动解除，开发者无法通过 SDK 或 REST API 进行干预。在锁定期间，即使用户输入了正确的验证信息也不允许登录。这个限制在 SDK 和云引擎中都有效。
+
 ### 用户的属性
 
 #### 默认属性
@@ -805,7 +807,7 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 {{geoPointObjectN
 
 {% endblock %}
 ### 用户的查询
-**请注意，新创建应用的 `_User` 表的查询权限默认是关闭的，通常我们推荐你在云引擎里封装用户查询，只查询特定条件的用户，避免开放用户表的全部查询权限。此外，你可以通过 class 权限设置打开查询权限，请参考 [数据与安全 - Class 级别的权限](data_security.html#Class_级别的_ACL)。**
+请注意，**新创建的应用的用户表 `_User` 默认关闭了查询权限**。你可以通过 Class 权限设置打开查询权限，请参考 [数据与安全 - Class 级别的权限](data_security.html#Class_级别的_ACL)。我们推荐开发者在 [云引擎](leanengine_overview.html) 中封装用户查询，只查询特定条件的用户，避免开放用户表的全部查询权限。
 
 查询用户代码如下：
 {% block code_query_user %}{% endblock %}
