修改首页的「文档阅读指南」为「常见问题一览」

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -398,6 +398,10 @@ body {
     max-width: 400px;
     margin: 15px auto;
   }
+
+  .faq-title {
+    font-weight: bold;
+  }
 }
 
 .doc-hero-links-wrap {
