--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -22,9 +22,9 @@
   <div class="row">
     <div class="col-sm-3">
       <div class="doc-hero-links">
-        <a href="quick-start-guide.html" class="doc-quick-start-btn">
-          <i class="icon icon-signpost"></i>
-          文档阅读指南
+        <a href="faq_list.html" class="doc-quick-start-btn">
+          <i class="icon icon-faq"></i>
+          常见问题一览
         </a>
       </div>
     </div>
