--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -84,6 +84,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">功能概览</a>
           <ul class="dropdown-menu">
+            <li><a href="quick-start-guide.html">文档阅读指南</a></li>
             <li><a href="storage_overview.html">数据存储服务总览</a></li>
             <li><a href="push_guide.html">消息推送服务总览</a></li>
             <li><a href="realtime_v2.html">实时通信服务总览</a></li>
