Add JavaScript Realtime SDK v3 migration guide (#1155)
* feat(js-realtime): add v3 migration guide

* fix(js-realtime): wrap all code tags with span.text-nowrap

* chore: revert to original Markdown markup

* fix(style):  for  causes unexpected cell width in tables

* fix(docs): two-dashes table markup not working with GFM

--- a/custom/less/theme-leancloud.less
+++ b/custom/less/theme-leancloud.less
@@ -851,7 +851,6 @@ textarea {
 
 code {
   font-size: 96%;
-  word-break: break-word;
   word-wrap: break-word;
 
   &.bstooltip {
@@ -1102,6 +1101,14 @@ hr {
 //
 // Tables
 // --------------------------------------------------
+
+table {
+  word-break: normal;
+  display: block;
+  width: 100%;
+  overflow: auto;
+  word-break: keep-all;
+}
 
 .table {
 
