--- a/custom/less/plugin-slick-grid-custom.less
+++ b/custom/less/plugin-slick-grid-custom.less
@@ -23,6 +23,7 @@
   .slick-viewport {
     padding-bottom: 8px;
     text-rendering: optimizeSpeed;
+    min-height: 430px;
   }
 
   .slick-header-columns {
