--- a/custom/less/section-leananalytics.less
+++ b/custom/less/section-leananalytics.less
@@ -209,10 +209,9 @@
       }
 
       .field-access {
-        display: inline-block;
-        padding-top: .3em;
-        padding-bottom: .3em;
-        border-radius: 4px;
+        display: block;
+        font-size: 85%;
+        margin-bottom: .3em;
         color: lighten(@gray-light, 20%);
       }
     }
