--- a/custom/less/plugin-solarized-light.less
+++ b/custom/less/plugin-solarized-light.less
@@ -65,7 +65,8 @@
   }
 }
 
-.copybtn, .runbtn {
+.copybtn,
+.runbtn {
   -webkit-appearance: none;
   border: 0;
   padding: 3px 6px;
@@ -76,6 +77,7 @@
   font-size: 24px;
   line-height: 1;
   text-transform: uppercase;
+  box-shadow: none;
 
   .icon {
     vertical-align: middle;
