--- a/custom/less/section-leanmessage.less
+++ b/custom/less/section-leanmessage.less
@@ -77,3 +77,47 @@
     display: none;
   }
 }
+
+.form-push-cond-inactivity {
+  position: relative;
+  top: -7px;
+  display: inline-block;
+  width: 100px;
+  vertical-align: -7px;
+}
+
+// Used for inline forms inside .form-horizontal forms
+.form-push-cond-audience-items {
+
+  .cond-row {
+
+    // Additional splitter for small screen
+    @media (max-width: @screen-xs) {
+      border-bottom: 1px solid @gray-lighter;
+      margin-bottom: 20px;
+      padding-bottom: 20px;
+    }
+  }
+
+  .form-control {
+    display: inline-block;
+    width: 30%;
+    // Calc condition item width
+    // 100% - container width
+    // 82px - delete button
+    // 10px - margin right spacing for each item
+    width: calc(~"(100% - 82px - 10px) / 3");
+    margin-bottom: 10px;
+
+    // Make half-width inputs full-width for mobile screens
+    @media (max-width: @screen-xs) {
+      width: 100%;
+      margin-right: 0;
+    }
+  }
+
+  // Button position fix for inline .form-control inside .cond-row
+  .btn-custom-remove {
+    vertical-align: top;
+  }
+}
