--- a/custom/less/ui-switch.less
+++ b/custom/less/ui-switch.less
@@ -47,7 +47,7 @@
 
   .switch:hover &,
   .switch:focus & {
-    color: #000;
+    color: @brand-primary;
   }
 }
 
@@ -82,7 +82,7 @@
   // content: attr(data-off);
   right: 11px;
   color: #aaa;
-  text-shadow: 0 1px rgba(255, 255, 255, 0.5);
+  text-shadow: 0 1px rgba(255, 255, 255, .5);
 }
 .switch-label:after {
   // content: attr(data-on);
@@ -94,7 +94,7 @@
 .switch-wrap.on .switch-label,
 .switch-input:checked ~ .switch-label {
   // background: #47a8d8;
-  border-color: @brand-success;
+  border-color: @brand-primary;
   // box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
 .switch-wrap.on .switch-label:before,
@@ -106,6 +106,10 @@
   opacity: 1;
 }
 
+.switch-handle-shadow() {
+  box-shadow+: 0 2px 4px fade(#000, 12%);
+}
+
 .switch-handle {
   position: absolute;
   top: 5px;
@@ -115,10 +119,17 @@
   background: white;
   border-radius: 10px;
   border: 1px solid #ccc;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, .08);
+  .switch-handle-shadow();
   // background-image: linear-gradient(to bottom, white 40%, #f0f0f0);
   transition: 0.15s ease-out;
   transition-property: border-color left background;
+
+  .switch:hover &,
+  .switch:focus & {
+    border-color: @brand-primary;
+    .switch-handle-shadow();
+    .form-focus(@brand-primary, 20%, 2px);
+  }
 }
 // .switch-handle:before {
 //   content: '';
@@ -136,8 +147,8 @@
 .switch-wrap.on .switch-handle,
 .switch-input:checked ~ .switch-handle {
   left: 25px;
-  background: @brand-success;
-  border-color: @brand-success;
+  background: @brand-primary;
+  border-color: @brand-primary;
   // box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 
