chore: remove deprecated GitCafe link

--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -361,7 +361,7 @@
   <div class="col-md-12">
 
 
-    <p>我们在 GitHub 上的 repo（<a href="https://gitcafe.com/leancloud" class="">GitCafe 镜像</a>）：</p>
+    <p>我们在 GitHub 上的 repos：</p>
 
     <ul class="list-unstyled list-inline">
       <li><a href="https://github.com/leancloud/leancloud-sdk" class="btn btn-lg btn-default"><i class="icon icon-github"></i> leancloud/leancloud-sdk</a>
