chore: restore header's default color

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -6,7 +6,7 @@
 @internal-link-color: #78909C;
 
 .header-link() {
-  color: @base-font-color!important;
+  color: #3090e4!important;
   border: none!important;
 }
 
