chore: restore header H1's default color

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -227,6 +227,7 @@ body {
 
     a {
       .header-link;
+      color: @base-font-color!important;
     }
 
     // When GitHub contributers loaded, add a special class to remove extra space
