chore: 更新技术支持链接
https://leanticket.cn/t/leancloud/
Closes #1187

--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -13,16 +13,16 @@
       <li class="muted">·</li>
       <li><a href="/apps.html" target="_self">App</a></li>
       <li class="muted">·</li>
-      <li><a href="http://leancloud.cn/docs/faq.html" target="_self">常见问题</a></li>
+      <li><a href="/docs/faq.html" target="_self">常见问题</a></li>
       <li class="muted">·</li>
-      <li><a href="http://ticket.leancloud.cn/" target="_self"><span class="mobile-hide">技术</span>支持</a></li>
+      <li><a href="https://leanticket.cn/t/leancloud/" target="_self"><span class="mobile-hide">技术</span>支持</a></li>
       <!-- <li><a href="http://ticket.leancloud.cn/tickets?token={{user.session_token || 'Gs5Xw4vjyCznrP6OcgMheOWDuatVpbFPiL78eMo6JC0dENB8'}}" target="_blank"><span class="mobile-hide">用户</span>反馈</a></li> -->
       <li class="muted">·</li>
       <li><a href="//status.leancloud.cn/"><span class="mobile-hide">健康</span>状态</a></li>
       <li class="muted">·</li>
-      <li><a href="http://forum.leancloud.cn/">社区</a></li>
+      <li><a href="https://forum.leancloud.cn/">社区</a></li>
       <li class="muted">·</li>
-      <li><a href="http://blog.leancloud.cn/">Blog</a></li>
+      <li><a href="https://blog.leancloud.cn/">Blog</a></li>
       <li class="muted">·</li>
       <li><a href="https://github.com/leancloud/docs">文档源码</a></li>
     </ul>
