fix(docs): [短信] 签名不允许纯英文或纯数字
Closes #1189

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -247,9 +247,10 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 短信签名是指短信内容里用【】括起来的短信发送方名称。如果没有明确在模板里指定，默认就是你的应用名称。应用名称可以在 [控制台 > 设置 > 基本信息](/app.html?appid={{appid}}#/general) 里修改，并且短信签名**必须出现在短信内容的开头或结尾。**
 
 #### 签名规范
- - 签名必须是公司简称、品牌名、网站名，长度控制在 3 到 11 个字符之间。例如签名【应用A】中的 **应用A** 算为 3 个字符。
+ - 签名必须是公司简称、品牌名、网站名，长度控制在 3 到 11 个字符之间。例如签名【应用A】中的 `应用A` 为 3 个字符。
  - 不能有任何非文字字符，也不可以是变量。
- - 不需要带上实心方头括号【】。
+ - 不允许全部为英文字符或全部为数字
+ - 不需要带上实心方头括号【】
  - 一个应用最多可以拥有 3 个签名（包含审核未通过的签名）。
 
 ## 短信计费
